--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>Gazelle in a Winter Coat</title>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
