Add nice fade-in text animation

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
   <div class="bgimg">
     <div class="middle">
-      <h1>Gazelle in a Winter Coat</h1>
-      <p>To Be Announced</p>
+      <h1 id="name">Gazelle in a Winter Coat</h1>
+      <p id="date">To Be Announced</p>
     </div>
   </div>
 </body>
