Add Steam widget

--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
   <div class="bgimg">
     <div class="middle">
       <h1 id="name">Gazelle in a Winter Coat</h1>
-      <p id="date">To Be Announced</p>
-      <br />
+      <div id="date">
+        <iframe src="https://store.steampowered.com/widget/1702480/" frameborder="0" width="646" height="190"></iframe>
+      </div>
+      <hr />
+      <h3 class="social-links-title">
+        Social Media
+      </h3>
       <div class="social-links">
         <a href="https://discord.gg/TFRREncpQQ" target="_blank" rel="noopener">
           <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
