Make steam widget scroll on mobile

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
   <div class="bgimg">
     <div class="middle">
-      <h1 id="name">Gazelle in a Winter Coat</h1>
-      <div id="date">
-        <iframe src="https://store.steampowered.com/widget/1702480/" frameborder="0" width="646" height="190"></iframe>
+      <h1 class="name">Gazelle in a Winter Coat</h1>
+      <div class="steam">
+        <iframe class="responsive-iframe" src="https://store.steampowered.com/widget/1702480/" frameborder="0" width=646 height=190></iframe>
       </div>
       <hr />
       <h3 class="social-links-title">
