update contact email

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </svg>
           </a>
           <a
-            href="mailto:contact@gazelleinawintercoat.com"
+            href="mailto:contact@boxofmushrooms.com"
             target="_blank"
             rel="noopener"
           >
